--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "loadash": "^1.0.0",
+    "classnames": "^2.2.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^1.1.4"
+  },
+  "devDependencies": {
+    "build-css": "^0.2.0",
+    "node-sass-chokidar": "0.0.3",
+    "react-scripts": "1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
