--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react-scripts": "1.1.0"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
