--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
-    "gh-pages": "^1.1.0",
     "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
@@ -12,7 +11,8 @@
   "devDependencies": {
     "build-css": "^0.2.0",
     "node-sass-chokidar": "0.0.3",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "gh-pages": "^1.1.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src/ --include-path ./node_modules src/ -o src/",
